--- a/consumer/package.json
+++ b/consumer/package.json
@@ -11,11 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
-    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fetch": "^1.1.0",
-    "node-fetch": "^2.6.11",
-    "xmlhttprequest": "^1.8.0"
+    "mongoose": "^7.3.1",
+    "node-fetch": "^2.6.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
