--- a/consumer/package.json
+++ b/consumer/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
-    "node-fetch": "^2.6.11"
+    "node-fetch": "^2.6.11",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
