--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       POSTGRES_PASSWORD: example
     ports:
       - "5432:5432"
+    volumes:
+      - "./postgres_data:/var/lib/postgresql/data"
 
   adminer:
     image: adminer
